Responsive All Devices

--- a/index.html
+++ b/index.html
@@ -470,9 +470,7 @@
                             <div class="address_contact">
                                 <h6 class="address_heading">Address :</h6>
                                 <address class="address">
-                                    Dusun Sirah Citanggulun, Desa Jatimukti
-                                    RT02/RW02, Kec Jatinangor, Kab Sumedang,
-                                    Jawa Barat
+                                    Rancaekek, Bandung, Jawa Barat
                                 </address>
                             </div>
                             <div class="email_contact">
