nambahin fitur & memperbaiki responsive

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         </li>
                     </ul>
 
-                    <div class="nav_feature">
+                    <div class="nav_feature nc_nav">
                         <button class="btn-thema nf" data-btn-thema>
                             <span class="ri-sun-line mode-light"></span>
                             <span class="ri-moon-line mode-dark"></span>
@@ -111,14 +111,11 @@
                             <span>High</span> Land Properti
                         </h2>
                         <p class="label_about">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit. Laborum optio cupiditate ducimus fugit, vero
-                            porro repellat amet voluptatibus facilis ratione
-                            voluptas rem. Lorem ipsum dolor sit amet,
-                            consectetur adipisicing elit. Dicta accusantium
-                            molestias, explicabo quae ipsam praesentium
-                            consectetur suscipit. Mollitia in, aliquid harum ad
-                            labore! Nobis, sequi.
+                            Highland Properti is a provider of properties,
+                            houses, villas, boarding houses, apartments, for
+                            sale or rent with the best service in Asia, more
+                            than 1000 people have used the Our properties.
+                            Contact us for more
                         </p>
                         <a href="#contact" class="btn_about">Contact Me</a>
                     </div>
@@ -279,16 +276,14 @@
                         </button>
                         <div class="panel">
                             <p class="text_accordion">
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Adipisci magni quaerat
-                                explicabo qui accusantium maxime, officia
-                                laborum illo repudiandae voluptate!
+                                Highland is the best property provider in Asia,
+                                providing many properties, villas, houses, etc
                             </p>
                         </div>
                     </div>
                     <div class="accordion">
                         <button class="btn_accordion">
-                            What is high land?
+                            Can it be paid in installments?
 
                             <span class="icon_wrap_accordion">
                                 <i class="ri-arrow-right-s-line icn_acc"></i>
@@ -296,16 +291,14 @@
                         </button>
                         <div class="panel">
                             <p class="text_accordion">
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Adipisci magni quaerat
-                                explicabo qui accusantium maxime, officia
-                                laborum illo repudiandae voluptate!
+                                Of course it can be paid in installments over
+                                several months or years
                             </p>
                         </div>
                     </div>
                     <div class="accordion">
                         <button class="btn_accordion">
-                            What is high land?
+                            Are there any properties outside of Asia?
 
                             <span class="icon_wrap_accordion">
                                 <i class="ri-arrow-right-s-line icn_acc"></i>
@@ -313,16 +306,14 @@
                         </button>
                         <div class="panel">
                             <p class="text_accordion">
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Adipisci magni quaerat
-                                explicabo qui accusantium maxime, officia
-                                laborum illo repudiandae voluptate!
+                                Currently not available, there will be later,
+                                please wait
                             </p>
                         </div>
                     </div>
                     <div class="accordion">
                         <button class="btn_accordion">
-                            What is high land?
+                            Is the place safe and comfortable?
 
                             <span class="icon_wrap_accordion">
                                 <i class="ri-arrow-right-s-line icn_acc"></i>
@@ -330,16 +321,15 @@
                         </button>
                         <div class="panel">
                             <p class="text_accordion">
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Adipisci magni quaerat
-                                explicabo qui accusantium maxime, officia
-                                laborum illo repudiandae voluptate!
+                                The place or location is very safe and there is
+                                security for the property, which is definitely
+                                very comfortable
                             </p>
                         </div>
                     </div>
                     <div class="accordion">
                         <button class="btn_accordion">
-                            What is high land?
+                            Can Payment be Made Through Crypto Coins?
 
                             <span class="icon_wrap_accordion">
                                 <i class="ri-arrow-right-s-line icn_acc"></i>
@@ -347,16 +337,14 @@
                         </button>
                         <div class="panel">
                             <p class="text_accordion">
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Adipisci magni quaerat
-                                explicabo qui accusantium maxime, officia
-                                laborum illo repudiandae voluptate!
+                                Of course you can, and there are also bank,
+                                ewallet and cash payments
                             </p>
                         </div>
                     </div>
                     <div class="accordion">
                         <button class="btn_accordion">
-                            What is high land?
+                            Can I rent a room?
 
                             <span class="icon_wrap_accordion">
                                 <i class="ri-arrow-right-s-line icn_acc"></i>
@@ -364,16 +352,13 @@
                         </button>
                         <div class="panel">
                             <p class="text_accordion">
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Adipisci magni quaerat
-                                explicabo qui accusantium maxime, officia
-                                laborum illo repudiandae voluptate!
+                                Of course you can, only for property
                             </p>
                         </div>
                     </div>
                     <div class="accordion">
                         <button class="btn_accordion">
-                            What is high land?
+                            Can I rent it for events?
 
                             <span class="icon_wrap_accordion">
                                 <i class="ri-arrow-right-s-line icn_acc"></i>
@@ -381,16 +366,15 @@
                         </button>
                         <div class="panel">
                             <p class="text_accordion">
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Adipisci magni quaerat
-                                explicabo qui accusantium maxime, officia
-                                laborum illo repudiandae voluptate!
+                                Of course you can, events such as weddings,
+                                schools, graduations, etc., are prohibited from
+                                being negative events
                             </p>
                         </div>
                     </div>
                     <div class="accordion">
                         <button class="btn_accordion">
-                            What is high land?
+                            Can you just buy a villa without a yard?
 
                             <span class="icon_wrap_accordion">
                                 <i class="ri-arrow-right-s-line icn_acc"></i>
@@ -398,10 +382,8 @@
                         </button>
                         <div class="panel">
                             <p class="text_accordion">
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Adipisci magni quaerat
-                                explicabo qui accusantium maxime, officia
-                                laborum illo repudiandae voluptate!
+                                You can't, because it's already one package with
+                                the villa/house
                             </p>
                         </div>
                     </div>
@@ -491,10 +473,10 @@
                 <div class="left_footer">
                     <a href="#" class="nav-logo"><span>HIGH</span> LAND</a>
                     <p class="text_footer">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing
-                        elit. Ipsum maxime, itaque optio ducimus unde, ullam
-                        cumque fugit cum impedit similique earum perspiciatis
-                        aut sapiente ab amet, quidem eum!
+                        Highland Properti is a provider of properties, houses,
+                        villas, boarding houses, apartments, for sale or rent
+                        with the best service in Asia, more than 1000 people
+                        have used the Our properties. Contact us for more
                     </p>
                 </div>
                 <div class="right_footer">
